Add docker file. bootstrap server and datastore
