# gen/models/borrower.go
@@ -1,0 +1,169 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Borrower Borrower model
+// swagger:model borrower
+type Borrower struct {
+
+	// created at
+	// Required: true
+	CreatedAt *string `json:"created_at"`
+
+	// first name
+	// Required: true
+	FirstName *string `json:"first_name"`
+
+	// guid
+	// Required: true
+	GUID *string `json:"guid"`
+
+	// id
+	// Required: true
+	ID *int64 `json:"id"`
+
+	// last name
+	// Required: true
+	LastName *string `json:"last_name"`
+
+	// middle name
+	MiddleName string `json:"middle_name,omitempty"`
+
+	// score
+	// Required: true
+	Score *float64 `json:"score"`
+
+	// updated at
+	// Required: true
+	UpdatedAt *string `json:"updated_at"`
+}
+
+// Validate validates this borrower
+func (m *Borrower) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateFirstName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGUID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLastName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateScore(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Borrower) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("created_at", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateFirstName(formats strfmt.Registry) error {
+
+	if err := validate.Required("first_name", "body", m.FirstName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateGUID(formats strfmt.Registry) error {
+
+	if err := validate.Required("guid", "body", m.GUID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateLastName(formats strfmt.Registry) error {
+
+	if err := validate.Required("last_name", "body", m.LastName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateScore(formats strfmt.Registry) error {
+
+	if err := validate.Required("score", "body", m.Score); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Borrower) validateUpdatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("updated_at", "body", m.UpdatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Borrower) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Borrower) UnmarshalBinary(b []byte) error {
+	var res Borrower
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
